# mini-ai-1c

./: .gitignore  README.md  package-lock.json  package.json
releases/: 2026-03-23-v1.1.22.md  README.md
specs/: 01_ai_chat.md  02_bsl_integration.md  03_configurator_integration.md  04_llm_profiles.md  05_settings.md  06_ui_requirements.md
tauri-app/: .gitignore  LICENSE  package-lock.json  package.json  vite.config.ts
tauri-app/mcp-1c-search/: Cargo.toml  README.md
tauri-app/mcp-1c-search/src/: config.rs  index.rs  main.rs  metadata.rs  search.rs  semantic.rs  tools.rs
tauri-app/mcp-1c-search/src/parser/: bsl_ast.rs
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/mcp-servers/: 1c-metadata.ts  1c-naparnik.js  1c-naparnik.ts
tauri-app/src-tauri/src/: ai_client.rs  bsl_client.rs  bsl_installer.rs  chat_history.rs  commands.rs  configurator.rs  crypto.rs  editor_bridge.rs  history_manager.rs  hotkeys.rs  job_guard.rs  lib.rs  llm_profiles.rs  logger.rs  mcp_client.rs  settings.rs
tauri-app/src-tauri/src/ai/: client.rs  codex_client.rs  mod.rs  models.rs  naparnik_client.rs  prompts.rs  tools.rs
tauri-app/src-tauri/src/commands/: ai.rs  bsl.rs  cli.rs  configurator.rs  mcp.rs  mod.rs  profiles.rs  settings.rs
tauri-app/src-tauri/src/llm/: mod.rs  providers.rs
tauri-app/src-tauri/src/llm/cli_providers/: codex.rs  mod.rs  qwen.rs
tauri-app/src/api/: chat.ts  cli_providers.ts  configurator.ts  profiles.ts  settings.ts
tauri-app/src/components/: CodeSidePanel.tsx  MarkdownRenderer.tsx  SettingsPanel.tsx
tauri-app/src/types/: mcp.ts  (+1 more)
(+44 files in other folders)
