[package]
name = "mcp-1c-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-1c-search"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
